# packagetest

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  compile.sh  pyproject.toml  run.sh  setup.py
.github/workflows/: BuildAndPublishUniform.yml
cpplib/: CMakeLists.txt
cpplib/packagetest/: CMakeLists.txt
cpplib/packagetest/include/: packagetest.h
src/packagetest/: __init__.py
src/packagetest_cpp/: packagetest_cpp.cpp
tests/: test_foo.py
