[build-system]
requires = [
    "setuptools",
    "pybind11==2.12.0",
    "wheel",
    "ninja",
    "cmake>=3.12"
]
build-backend = "setuptools.build_meta"

[project]
name = "packagetest"
dynamic = ["version"]
dependencies = [
    "numpy>=1.21",
    "psutil",
]
requires-python = ">= 3.11"
authors = [
    {name = "Bruno Schilling", email = "bruno.schilling@htw-berlin.de"}
]
description = "Some packaging test"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["packaging", "python"]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore:(ast.Str|Attribute s|ast.NameConstant|ast.Num) is deprecated:DeprecationWarning:_pytest",
]
testpaths = ["tests"]

[tool.cibuildwheel]
test-command = "pytest {project}"
test-extras = ["test"]
